tests/modules/errors/missing_module.nfu
import {nothing} from "does_not_exist"
nothing
